# vivuvn_project

./: .gitignore  README.md  package-lock.json
vivuvn_ai_service/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  load_location_data.py  pyproject.toml  requirements.txt
vivuvn_ai_service/app/: __init__.py  main.py
vivuvn_ai_service/app/agents/: __init__.py  itinerary_agent.py  response_agent.py  search_agent.py  state.py  travel_planning_agent.py  validation_agent.py  weather_agent.py
vivuvn_ai_service/app/api/: __init__.py  schemas.py
vivuvn_ai_service/app/api/routes/: data_management.py  travel_planner.py
vivuvn_ai_service/app/api/schemas/: __init__.py  data.py  place.py  system.py  travel.py
vivuvn_ai_service/app/clients/: gemini_client.py  openweather_client.py  pinecone_client.py
vivuvn_ai_service/app/core/: config.py  exception_handlers.py  exceptions.py  middleware.py
vivuvn_ai_service/app/models/: __init__.py  travel_models.py  weather_models.py
vivuvn_ai_service/app/prompts/: __init__.py  prompt_components.py  travel_prompts.py
vivuvn_ai_service/app/services/: ai_service.py  data_management_service.py  embedding_service.py  pinecone_service.py  travel_agent.py  vector_service.py  weather_service.py
vivuvn_ai_service/app/utils/: data_loader.py  geo_utils.py  helpers.py  warning_messages.py  weather_helpers.py
vivuvn_ai_service/data/: sample_data.json
vivuvn_api/: .dockerignore  .env.prod.template  .env.template  .gitignore  DEPLOYMENT-GUIDE.md  Dockerfile  README-Docker.md  SECURITY-CHECKLIST.md  deploy-production.bat  deploy-production.sh  docker-compose.prod.yml  docker-compose.yml  docker-startup.bat  docker-startup.sh  install-docker.bat  install-docker.sh  setup-secure-env.bat  setup-secure-env.sh  vivuvn_api.sln
vivuvn_api/vivuvn_api/: Program.cs  appsettings.Docker.json  appsettings.Production.json  appsettings.Template.json  vivuvn_api.csproj  vivuvn_api.http
vivuvn_api/vivuvn_api/Controllers/: AnalyticsController.cs  AuthController.cs  BudgetController.cs  FavoritePlaceController.cs  ItineraryChatController.cs  ItineraryController.cs  ItineraryHotelController.cs  ItineraryInviteController.cs  ItineraryMemberController.cs  ItineraryRestaurantController.cs  ItineraryScheduleController.cs  LocationController.cs  NotificationController.cs  ProvinceController.cs  UserController.cs  UserDeviceController.cs
vivuvn_api/vivuvn_api/Data/: AppDbContext.cs  ProvinceData.cs  hotel_data.json  hotels.json  location_data.json  location_data.json.orig  restaurant_data.json  restaurants.json
vivuvn_api/vivuvn_api/Exceptions/: GlobalExceptionHandler.cs  ValidationException.cs  ValidationExceptionHandler.cs
vivuvn_api/vivuvn_api/Extensions/: ConfigurationExtenstions.cs  DependencyInjection.cs  TransportationModeExtensions.cs
vivuvn_api/vivuvn_api/Filters/: ValidationFilter.cs
vivuvn_api/vivuvn_api/Helpers/: BrevoSettings.cs  Constants.cs  TextHelper.cs  TimeOnlyJsonConverter.cs
vivuvn_api/vivuvn_api/Mappings/: AutoMapperProfiles.cs
vivuvn_api/vivuvn_api/Migrations/: 20250929165701_Initial.Designer.cs  20250929165701_Initial.cs  20251003053123_AddFieldToLocationTable.Designer.cs  20251003053123_AddFieldToLocationTable.cs  20251004073753_UpdateUserTable.cs  (+58 more)
vivuvn_app/: README.md  analysis_options.yaml  firebase.json  pubspec.yaml
vivuvn_app/.claude/: settings.local.json
vivuvn_app/lib/: firebase_options.dart  main.dart  my_app.dart
vivuvn_app/linux/: CMakeLists.txt
vivuvn_app/test/: widget_test.dart
vivuvn_app/web/: index.html  manifest.json
vivuvn_app/windows/: CMakeLists.txt
vivuvn_web_client/: eslint.config.js  index.html  package-lock.json  package.json
vivuvn_web_client/src/: App.jsx  index.css  main.jsx  router.jsx  store.js
(+1160 files in other folders)
